@@ -29,6 +29,7 @@ sources = """
           kdm_dialog.cc
           new_film_dialog.cc
           preset_colour_conversion_dialog.cc
+          progress.cc
           properties_dialog.cc
           repeat_dialog.cc
           screen_dialog.cc
